Fixed bug hamburger menu always visible
* The css class was never hitting the hamburger menu.
* I now hide the container of the burger menu.
* I moved the bootstrap class to css because .d-flex
  sets the display property with !important, so it cannot
  be overwritten by the media property in the css.

--- a/custom_assets/css/header.css
+++ b/custom_assets/css/header.css
@@ -35,8 +35,13 @@
   cursor: pointer;
 }
 
+#site-navigation > #smallScreenMenu {
+  display: flex;
+  justify-content: end;
+}
+
 @media screen and (min-width: 37.49em) {
-  #site-navigation > #burgerContainer {
+  #site-navigation > #smallScreenMenu {
     display: none;
   }
 }
